@@ -223,11 +223,7 @@ This file is generated/updated by Multi Translator
   <name>Anabeth</name>
   <name>Anakin</name>
   <name>Ana's</name>
-  <name>MLB</name>
-  <name>FIFA</name>
-  <name>NBA</name>
   <name>Anastasia</name>
-  <name>Nascar</name>
   <name>Anchorage</name>
   <name>Anders</name>
   <name>Anderson</name>
@@ -737,7 +733,6 @@ This file is generated/updated by Multi Translator
   <name>Brandi</name>
   <name>Brandie</name>
   <name>Brando</name>
-  <name>Instagram</name>
   <name>Brandon</name>
   <name>Brandt</name>
   <name>Brandy</name>
@@ -1075,6 +1070,7 @@ This file is generated/updated by Multi Translator
   <name>Chavez</name>
   <name>Chávez</name>
   <name>Chaz</name>
+  <name>Che Guevara</name>
   <name>Chehalis</name>
   <name>Chekhov</name>
   <name>Chekov</name>
@@ -1330,6 +1326,7 @@ This file is generated/updated by Multi Translator
   <name>Daisys</name>
   <name>Dakar</name>
   <name>Dakota</name>
+  <name>Dalai Lama</name>
   <name>Dale</name>
   <name>D'Alessandro</name>
   <name>Dalgaard</name>
@@ -1870,6 +1867,7 @@ This file is generated/updated by Multi Translator
   <name>Federal Bureau of Investigation</name>
   <name>Federated</name>
   <name>Felicia</name>
+  <name>Felicity</name>
   <name>Felipe</name>
   <name>Felix</name>
   <name>Femara</name>
@@ -1884,6 +1882,7 @@ This file is generated/updated by Multi Translator
   <name>Fiddler</name>
   <name>Fiedler</name>
   <name>Fieldings</name>
+  <name>FIFA</name>
   <name>Fifi</name>
   <name>Figg</name>
   <name>Fiji</name>
@@ -2559,6 +2558,7 @@ This file is generated/updated by Multi Translator
   <name>Inez</name>
   <name>Ingalls</name>
   <name>Ingrid</name>
+  <name>Instagram</name>
   <name>Insulin</name>
   <name>Internet</name>
   <name>Interpool</name>
@@ -2649,6 +2649,7 @@ This file is generated/updated by Multi Translator
   <name>Jacksons</name>
   <name>Jacksonville</name>
   <name>Jacob</name>
+  <name>Jacob Zuma</name>
   <name>Jacobs</name>
   <name>Jacobson</name>
   <name>Jacoby</name>
@@ -2753,7 +2754,6 @@ This file is generated/updated by Multi Translator
   <name>Jerri</name>
   <name>Jerrie</name>
   <name>Jerry</name>
-  <name>Usain Bolt</name>
   <name>Jerrys</name>
   <name>Jersey</name>
   <name>Jerusalem</name>
@@ -3435,6 +3435,7 @@ This file is generated/updated by Multi Translator
   <name>Magnus</name>
   <name>Magoo</name>
   <name>Maguire</name>
+  <name>Mahatma Gandhi</name>
   <name>Maholevec</name>
   <name>Maia</name>
   <name>Maias</name>
@@ -3460,6 +3461,7 @@ This file is generated/updated by Multi Translator
   <name>Maldives</name>
   <name>Maldivian</name>
   <name>Maldivians</name>
+  <name>Malé</name>
   <name>Malekai</name>
   <name>Malfoy</name>
   <name>Mali</name>
@@ -3845,6 +3847,7 @@ This file is generated/updated by Multi Translator
   <name>Mitchells</name>
   <name>Mizrahi</name>
   <name>Mjolnir</name>
+  <name>MLB</name>
   <name>MMA</name>
   <name>Moby</name>
   <name>Modigliani</name>
@@ -3894,6 +3897,7 @@ This file is generated/updated by Multi Translator
   <name>Mor'du</name>
   <name>Moreau</name>
   <name>Morgan</name>
+  <name>Morgan Freeman</name>
   <name>Moritz</name>
   <name>Mormonism</name>
   <name>Moroccan</name>
@@ -3929,8 +3933,6 @@ This file is generated/updated by Multi Translator
   <name>Muhammad Ali</name>
   <name>Muhammed</name>
   <name>Muhammeds</name>
-  <name>Robert Mugabe</name>
-  <name>Che Guevara</name>
   <name>Mulholland</name>
   <name>Mullholand</name>
   <name>Mumbai</name>
@@ -3985,6 +3987,7 @@ This file is generated/updated by Multi Translator
   <name>Napoleon</name>
   <name>Narcissa</name>
   <name>NASA</name>
+  <name>Nascar</name>
   <name>Nash</name>
   <name>Nashville</name>
   <name>Nashville-Davidson</name>
@@ -4009,6 +4012,7 @@ This file is generated/updated by Multi Translator
   <name>Naypyidaw</name>
   <name>Nazi</name>
   <name>Nazis</name>
+  <name>NBA</name>
   <name>NBT</name>
   <name>NCIS</name>
   <name>N'Djamena</name>
@@ -4022,6 +4026,7 @@ This file is generated/updated by Multi Translator
   <name>Nellie</name>
   <name>Nelly</name>
   <name>Nelson</name>
+  <name>Nelson Mandela</name>
   <name>Nelsson</name>
   <name>Nemesis</name>
   <name>Nemo</name>
@@ -4252,7 +4257,6 @@ This file is generated/updated by Multi Translator
   <name>Owen</name>
   <name>Owens</name>
   <name>Oxford</name>
-  <name>University of Oxford</name>
   <name>Oxfords</name>
   <name>P.M.</name>
   <name>Pablo</name>
@@ -4674,6 +4678,7 @@ This file is generated/updated by Multi Translator
   <name>Robbie</name>
   <name>Robbins</name>
   <name>Robert</name>
+  <name>Robert Mugabe</name>
   <name>Roberta</name>
   <name>Roberto</name>
   <name>Roberts</name>
@@ -4709,7 +4714,6 @@ This file is generated/updated by Multi Translator
   <name>Romanovs</name>
   <name>Rome</name>
   <name>Romeo</name>
-  <name>Dalai Lama</name>
   <name>Romi</name>
   <name>Romilda</name>
   <name>Ron</name>
@@ -5177,10 +5181,6 @@ This file is generated/updated by Multi Translator
   <name>Stephens</name>
   <name>Steve</name>
   <name>Steve Jobs</name>
-  <name>Winnie Mandela</name>
-  <name>Morgan Freeman</name>
-  <name>Jacob Zuma</name>
-  <name>Mahatma Gandhi</name>
   <name>Steven</name>
   <name>Stevens</name>
   <name>Stevenson</name>
@@ -5517,7 +5517,6 @@ This file is generated/updated by Multi Translator
   <name>Turner</name>
   <name>Tuscany</name>
   <name>Tuvalu</name>
-  <name>NFL</name>
   <name>TV</name>
   <name>Twitter</name>
   <name>Ty</name>
@@ -5548,6 +5547,7 @@ This file is generated/updated by Multi Translator
   <name>United Kingdom</name>
   <name>United States</name>
   <name>United States of America</name>
+  <name>University of Oxford</name>
   <name>Univille</name>
   <name>Upper East Side</name>
   <name>Urameshi</name>
@@ -5555,6 +5555,7 @@ This file is generated/updated by Multi Translator
   <name>Urameshi-san</name>
   <name>Ursula</name>
   <name>Uruguay</name>
+  <name>Usain Bolt</name>
   <name>USB</name>
   <name>USGA</name>
   <name>Usher</name>
@@ -5786,6 +5787,7 @@ This file is generated/updated by Multi Translator
   <name>Winchester</name>
   <name>Windhoek</name>
   <name>Wingfield</name>
+  <name>Winnie Mandela</name>
   <name>Winston</name>
   <name>Winstone</name>
   <name>Wisconsin</name>
@@ -5921,7 +5923,6 @@ This file is generated/updated by Multi Translator
   <name>Zoey</name>
   <name>Zoloft</name>
   <name>Zor-El</name>
-  <name>Nelson Mandela</name>
   <name>Zorg</name>
   <name>Zori</name>
   <name>Zork</name>
@@ -5936,5 +5937,4 @@ This file is generated/updated by Multi Translator
   <name>Zyprexa</name>
   <name>Zyrtec</name>
   <name>Zzyzx</name>
-  <name>Malé</name>
 </names>
